# Valuer

./:  valuer.spec  .gitignore  README.md  config.ini  main.py  pyproject.toml  valuer.py
app/: __init__.py  app.py
app/config/: config.py  logger.py
app/handlers/: __init__.py  ai_handler.py  file_handler.py  local_files_handler.py  main_file_handler.py
app/models/: __init__.py  estimate.py  result.py  sub_estimate.py  table.py  table_fabric.py
app/view/: __init__.py  file_tree.py  table.py  tabs.py
resources/: config.ini
resources/style/: index.tcss
test/ai_tests/: ai_test.py
test/config_tests/: config_test.py
test/handlers_tests/: ai_test.py  main_handler_test.py
test/view_tests/: view_test.py
valuer/: __init__.py  installer.py  main.py  valuer.py  valuer_app.py
valuer/app/: __init__.py
valuer/app/config/: config.py  logger.py
valuer/app/errors/: __init__.py  sub_estimate_errors.py
valuer/app/handlers/: __init__.py  ai_handler.py  file_handler.py  local_files_handler.py
valuer/app/models/: estimate.py  result.py  sub_estimate.py  table_fabric.py
valuer/app/view/: __init__.py  file_tree.py  input_block.py  table.py  tabs.py
valuer/resources/: config.ini
valuer/resources/data/: ai-contex.txt
valuer/resources/style/: index.tcss
