[tool.poetry]
name = "valuer"
version = "1.0.0"
description = ""
authors = ["RomrerioPrevious <ggJohn12345@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
textual = "^0.70.0"
pandas = "^2.2.2"
icecream = "^2.1.3"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
transformers = "^4.41.2"
torch = "^2.3.1"
sentencepiece = "^0.2.0"
odfpy = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
